--- a/views/elements/longin.html
+++ b/views/elements/longin.html
@@ -4,16 +4,20 @@
 	<title>Owner Longin</title>
 </head>
 <body>
-	<form action="" method="POST">
+	<form action="http://localhost/Hw5/configs/config.php" method="POST">
 		<fieldset>
 			<legend>Login Information</legend>
 			 User Name:<br>
 			<input type="text" name="user"><br>
 			Password:<br>
-			<input type="text" name="ps">
-			<input type="submit" value="Log In">
+			<input type="text" name="ps" required>
+			<input type="submit" value="Log In" required>
+			<br>
+			<br>
 		</fieldset>
 	</form>
-
+	Click here to clean <a href = "logout.php" tite = "Logout">Session.
 </body>
 </html>
+
+
