--- a/views/elements/control_pnale.html
+++ b/views/elements/control_pnale.html
@@ -5,5 +5,16 @@
 </head>
 <body>
 
+<form method="POST">
+	<textarea rows="4" cols="50" name="menu">the current menu activity</textarea>
+	
+	<input type="submit" formaction="http://localhost/Hw5/controllers/revert.php" value="Revert" name="revert">
+	<input type="submit" formaction="http://localhost/Hw5/controllers/save.php" value="Save" name="save">
+</form>
+</form>
+
+
+;
+
 </body>
 </html>
