--- a/views/elements/longin.html
+++ b/views/elements/longin.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,7 +12,7 @@
 			<input type="text" name="user"><br>
 			Password:<br>
 			<input type="text" name="ps" required>
-			<input type="submit" value="Log In" required>
+			<input type="submit" value="Log In" name="login" required>
 			<br>
 			<br>
 		</fieldset>
